--- a/TW_Survey_Presentation.Rmd
+++ b/TW_Survey_Presentation.Rmd
@@ -13,7 +13,8 @@ library(tidyverse)
 library(GPArotation)
 library(psych)
 ```
-
+## World Values Survey : Taiwan
+- data source: http://www.worldvaluessurvey.org/wvs.jsp
 
 ## Import Data in TW_Survey
 
